# stg

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
stg/: .env  __init__.py  forms.py  main.py  utils.py
stg/steganography/steganography/: steganography.py
stg/templates/: base.html  file.html  index.html
